--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,8 @@
-
 /* Import del mio file Navbar */
 @import '../scss/_partials/navbar';
+
+/* Import del mio file Globale */
+@import '../scss/global.scss';
 
 /* Import del mio file variabili */
 @import '../scss/variables.scss';
