--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,23 +1,8 @@
-/*#region Import e Variabili Palette colore */
+/*#region Import e Variabili  */
 /* Import font da Google */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-/* Palette Colore */
+/* Font Family & Weight */
+/* Palette Colori */
+/* Dimensioni (Width/Heigt) principali */
+/* Bordi e padding */
 /*#endregion */
-/* Regole generali foglio di stile */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
-  border: none;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  color: hsl(252deg, 30%, 17%);
-}
