--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,8 +1,7 @@
-/*#region Import e Variabili  */
 /* Import font da Google */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 /* Font Family & Weight */
 /* Palette Colori */
 /* Dimensioni (Width/Heigt) principali */
 /* Bordi e padding */
-/*#endregion */
+/* Position Sticky Rules */
