--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,11 +1,11 @@
-/* Import del mio file variabili */ /*#region Import e Variabili  */
+/* Import del mio file variabili */
 /* Import font da Google */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 /* Font Family & Weight */
 /* Palette Colori */
 /* Dimensioni (Width/Heigt) principali */
 /* Bordi e padding */
-/*#endregion */
+/* Position Sticky Rules */
 /*#region Regole generali foglio di stile */
 *,
 *::after,
