Aggiunto stile alla sidebar laterale, in avvio stile per il popup notifiche

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,9 @@
 /* Import del mio file Navbar */
 @import '../scss/_partials/navbar';
 
+/* Import del mio file Main */
+@import '../scss/_partials/main';
+
 /* Import del mio file Globale */
 @import '../scss/global.scss';
 
