--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 /* Tag navbar principale */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 #site_nav {
   width: 100%;
   background: hsl(252deg, 30%, 100%);
@@ -90,6 +91,172 @@
   overflow: hidden;
 }
 
+/* Import del mio file Main */
+/* Import del mio file variabili */
+/* Import font da Google */
+/* Font Family & Weight */
+/* Palette Colori */
+/* Dimensioni (Width/Heigt) principali */
+/* Bordi e padding */
+/* Position Sticky Rules */
+/*#region Regole Main */
+main {
+  position: relative;
+  top: 5.4rem;
+}
+
+main .container {
+  display: grid;
+  grid-template-columns: 18vw auto 20vw;
+  -webkit-column-gap: 2rem;
+     -moz-column-gap: 2rem;
+          column-gap: 2rem;
+}
+
+/*#endregion */
+/*#region Common Rules */
+main .container .left .profile,
+.left .sidebar .menu-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .container,
+.left .sidebar .menu-item,
+.left .sidebar i {
+  position: relative;
+}
+
+/*#endregion */
+/*#region Left Zone */
+main .container .left {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  position: sticky;
+  top: 5.4rem;
+}
+
+main .container .left .profile {
+  padding: 1rem;
+  background: hsl(252deg, 30%, 100%);
+  border-radius: 1rem;
+  -webkit-column-gap: 1rem;
+     -moz-column-gap: 1rem;
+          column-gap: 1rem;
+  width: 100%;
+}
+
+/*#region Left Zone */
+main .container .left .sidebar {
+  margin-top: 1rem;
+  background: hsl(252deg, 30%, 100%);
+  border-radius: 2rem;
+}
+
+/* sidebar */
+.left .sidebar {
+  /* menu-item */
+  /* menu-item */
+  /* Icons */
+  /* notification-count */
+  /* H3 */
+  /* Active link */
+}
+.left .sidebar .menu-item {
+  height: 4rem;
+  cursor: pointer;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+.left .sidebar .menu-item:hover {
+  background: hsl(252deg, 30%, 95%);
+}
+.left .sidebar .menu-item:first-child.active {
+  border-top-left-radius: 1rem;
+  overflow: hidden;
+}
+.left .sidebar .menu-item:last-child.active {
+  border-bottom-left-radius: 1rem;
+  overflow: hidden;
+}
+.left .sidebar i {
+  font-size: 1.4rem;
+  color: hsl(252deg, 15%, 65%);
+  margin-left: 2rem;
+}
+.left .sidebar i .notification-count {
+  background: hsl(0deg, 95%, 65%);
+  color: hsl(252deg, 30%, 100%);
+  font-size: 0.7rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 0.8rem;
+  padding: 0.1rem 0.4rem;
+  position: absolute;
+  top: -0.2rem;
+  right: -0.3rem;
+}
+.left .sidebar h3 {
+  margin-left: 1.5rem;
+  font-size: 1rem;
+}
+.left .sidebar .active {
+  background: hsl(252deg, 30%, 95%);
+}
+.left .sidebar .active i,
+.left .sidebar .active h3 {
+  color: hsl(252deg, 75%, 60%);
+}
+.left .sidebar .active::before {
+  content: "";
+  display: block;
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  background: hsl(252deg, 75%, 60%);
+}
+
+.left .btn {
+  margin-top: 1rem;
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+/* notifications-popup */
+.left .notifications-popup {
+  position: absolute;
+  top: 0;
+  left: 110%;
+  width: 30rem;
+  background: hsl(252deg, 30%, 100%);
+  border-radius: 1rem;
+  padding: 1rem;
+  -webkit-box-sizing: 0 0 2rem hsl(252deg, 75%, 60%);
+          box-sizing: 0 0 2rem hsl(252deg, 75%, 60%);
+  z-index: 8;
+}
+
+.left .notifications-popup::before {
+  content: "";
+  width: 1.2rem;
+  height: 1.2rem;
+  display: block;
+  background: hsl(252deg, 30%, 100%);
+  position: absolute;
+  left: -0.6rem;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+/*#endregion */
+/*#endregion */
 /* Import del mio file Globale */
 /* Import del mio file variabili */
 /* Import font da Google */
