--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -11,6 +11,21 @@ main .container {
     display: grid;
     grid-template-columns: 18vw auto 20vw;
     column-gap: 2rem;
+}
+
+/*#endregion */
+
+/*#region Common Rules */
+
+main .container .left .profile,
+.left .sidebar .menu-item {
+    display: flex;
+    align-items: center;
+}
+
+main .container,
+.left .sidebar .menu-item,
+.left .sidebar i {
     position: relative;
 }
 
@@ -23,17 +38,114 @@ main .container .left {
     top: $sticky-top-left;
 }
 
-.left .profile {
+main .container .left .profile {
     padding: $card-padding;
     background: $color-white;
     border-radius: $card-border-radius;
-    display: flex;
-    align-items: center;
     column-gap: 1rem;
     width: 100%;
 }
 
 /*#region Left Zone */
+main .container .left .sidebar {
+    margin-top: 1rem;
+    background: $color-white;
+    border-radius: $border-radius;
+}
+
+/* sidebar */
+.left .sidebar {
+    /* menu-item */
+    .menu-item {
+        height: 4rem;
+        cursor: pointer;
+        transition: all 300ms ease;
+    }
+    /* menu-item */
+    .menu-item:hover {
+        background: $color-light;
+    }
+    .menu-item:first-child.active {
+        border-top-left-radius: $card-border-radius;
+        overflow: hidden;
+    }
+    .menu-item:last-child.active {
+        border-bottom-left-radius: $card-border-radius;
+        overflow: hidden;
+    }    
+    /* Icons */
+    i {
+        font-size: 1.4rem;
+        color: $color-gray;
+        margin-left: 2rem;
+    }
+    /* notification-count */
+    i .notification-count {
+        background: $color-danger;
+        color: $color-white;
+        font-size: 0.7rem;
+        width: fit-content;
+        border-radius: 0.8rem;
+        padding: 0.1rem 0.4rem;
+        position: absolute;
+        top: -0.2rem;
+        right: -0.3rem;
+    }
+    /* H3 */
+    h3 {
+        margin-left: 1.5rem;
+        font-size: 1rem;
+    }
+    /* Active link */
+    .active {
+        background: $color-light;
+    }
+    .active i,
+    .active h3 {
+        color: $color-primary;
+    }
+    .active::before {
+        content: "";
+        display: block;
+        width: 0.5rem;
+        height: 100%;
+        position: absolute;
+        background: $color-primary;
+    }
+}
+
+.left .btn {
+    margin-top: 1rem;
+    width: 100% ;
+    text-align: center;
+    padding: 1rem 0;
+}
+/* notifications-popup */
+.left .notifications-popup {
+    position: absolute;
+    top: 0;
+    left: 110%;
+    width: 30rem;
+    background: $color-white;
+    border-radius: $card-border-radius;
+    padding: $card-padding;
+    box-sizing: 0 0 2rem $color-primary;
+    z-index: 8;
+}
+
+.left .notifications-popup::before {
+    content: "";
+    width: 1.2rem;
+    height: 1.2rem;
+    display: block;
+    background: $color-white;
+    position: absolute;
+    left: -0.6rem;
+    transform: rotate(45deg);
+}
+
+
+
 
 /*#endregion */
 
