--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,6 +273,116 @@ main .container .left .sidebar {
 
 /*#endregion */
 /*#region Middle Zone */
+/*#region Stories */
+.middle .stories {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 12rem;
+  gap: 0.5rem;
+}
+
+.middle .stories .story,
+.middle .create-post {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+/* Story - Tutte le classi */
+.middle .stories {
+  /** Mixis per l'immagine della story
+  * $image => Url immagine della stories
+  */
+  /* Prima Story */
+  /* Seconda Story */
+  /* Terza Story */
+  /* Quarta Story */
+  /* Quinta Story */
+  /* Sesta Story */
+  /* Immagine di profilo */
+}
+.middle .stories .story {
+  padding: 1rem;
+  border-radius: 1rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: hsl(252deg, 30%, 100%);
+  font-size: 0.75rem;
+  width: 100%;
+  background: hsl(0deg, 95%, 65%);
+  position: relative;
+  overflow: hidden;
+}
+.middle .stories .story::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.75)));
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
+  position: absolute;
+  bottom: 0;
+}
+.middle .stories .story .name {
+  z-index: 2;
+}
+.middle .stories .story:nth-child(1) {
+  background: url("./../../../assets/img/story-1.jpg") no-repeat center center/cover;
+}
+.middle .stories .story:nth-child(2) {
+  background: url("./../../../assets/img/story-2.jpg") no-repeat center center/cover;
+}
+.middle .stories .story:nth-child(3) {
+  background: url("./../../../assets/img/story-3.jpg") no-repeat center center/cover;
+}
+.middle .stories .story:nth-child(4) {
+  background: url("./../../../assets/img/story-4.jpg") no-repeat center center/cover;
+}
+.middle .stories .story:nth-child(5) {
+  background: url("./../../../assets/img/story-5.jpg") no-repeat center center/cover;
+}
+.middle .stories .story:nth-child(6) {
+  background: url("./../../../assets/img/story-6.jpg") no-repeat center center/cover;
+}
+.middle .stories .story .profile-picture {
+  width: 2rem;
+  height: 2rem;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin: 0 auto;
+  border: 3px solid hsl(252deg, 75%, 60%);
+}
+
+.middle .create-post {
+  width: 100%;
+  margin-top: 1rem;
+  background: hsl(252deg, 30%, 100%);
+  padding: 0.4rem 1rem;
+  border-radius: 2rem;
+}
+
+.middle .create-post input[type=text] {
+  width: 100%;
+  text-align: left;
+  padding-left: 1rem;
+  background: transparent;
+  color: hsl(252deg, 30%, 17%);
+  margin-right: 1rem;
+}
+
+/*#endregion */
 /*#endregion */
 /* Import del mio file Globale */
 /* Import del mio file variabili */
