--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -161,6 +161,88 @@ main .container .left .sidebar {
 
 /*#region Middle Zone */
 
+/*#region Stories */
+.middle .stories {
+    display: flex;
+    justify-content: space-between;
+    height: 12rem;
+    gap: 0.5rem;
+}
+
+.middle .stories .story,
+.middle .create-post {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+}
+
+/* Story - Tutte le classi */
+.middle .stories {
+    .story {
+        padding: $card-padding;
+        border-radius: $card-border-radius;
+        flex-direction: column;
+        color: $color-white;
+        font-size: 0.75rem;
+        width: 100%;
+        background: $color-danger;
+        position: relative;
+        overflow: hidden;
+    }
+    .story::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 5rem;
+        background: linear-gradient(transparent, rgba(0,0,0,0.75));
+        position: absolute;
+        bottom: 0;
+    }
+    .story .name {
+        z-index: 2;
+    } 
+
+    /** Mixis per l'immagine della story
+    * $image => Url immagine della stories
+    */
+    @mixin storyPictures($image) {
+        background: url($image) no-repeat center center/cover;
+    }
+
+    .story:nth-child(1) {@include storyPictures('./../../../assets/img/story-1.jpg')} /* Prima Story */
+    .story:nth-child(2) {@include storyPictures('./../../../assets/img/story-2.jpg')}  /* Seconda Story */  
+    .story:nth-child(3) {@include storyPictures('./../../../assets/img/story-3.jpg')} /* Terza Story */   
+    .story:nth-child(4) {@include storyPictures('./../../../assets/img/story-4.jpg')}  /* Quarta Story */  
+    .story:nth-child(5) {@include storyPictures('./../../../assets/img/story-5.jpg')}  /* Quinta Story */  
+    .story:nth-child(6) {@include storyPictures('./../../../assets/img/story-6.jpg')}  /* Sesta Story */
+    /* Immagine di profilo */
+    .story .profile-picture {
+        width: 2rem;
+        height: 2rem;
+        align-self: flex-start;
+        margin: 0 auto;
+        border: 3px solid $color-primary;
+    }
+}
+
+.middle .create-post {
+    width: 100%;
+    margin-top: 1rem;
+    background: $color-white;
+    padding: 0.4rem $card-padding;
+    border-radius: $border-radius;
+}
+
+.middle .create-post input[type='text'] {
+    width: 100%;
+    text-align: left;
+    padding-left: 1rem;
+    background: transparent;
+    color: $color-dark;
+    margin-right: 1rem;
+}
+/*#endregion */
+
 
 /*#endregion */
 
