--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,6 +383,66 @@ main .container .left .sidebar {
 }
 
 /*#endregion */
+/*#region Feeds */
+.middle .feeds {
+  /* Foto del Post */
+}
+.middle .feeds .feed {
+  background: hsl(252deg, 30%, 100%);
+  border-radius: 1rem;
+  padding: 1rem;
+  margin: 1rem 0;
+  font-size: 0.85rem;
+  line-height: 1.5;
+}
+.middle .feeds .feed .head,
+.middle .feeds .feed .action-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.middle .feeds .feed .user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+}
+.middle .feeds .feed .photo {
+  border-radius: 1rem;
+  overflow: hidden;
+  margin: 0.7rem 0;
+}
+.middle .feeds .feed .action-buttons {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.4rem;
+  margin: 0.6rem;
+}
+
+.middle .liked-by {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.middle .liked-by span {
+  width: 1.4rem;
+  height: 1.4rem;
+  display: block;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid hsl(252deg, 30%, 100%);
+  margin-left: -0.6rem;
+}
+.middle .liked-by span:first-child {
+  margin: 0;
+}
+
+/*#endregion */
 /*#endregion */
 /* Import del mio file Globale */
 /* Import del mio file variabili */
