--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -243,6 +243,58 @@ main .container .left .sidebar {
 }
 /*#endregion */
 
+/*#region Feeds */
+.middle .feeds {
+    .feed {
+        background: $color-white;
+        border-radius: $card-border-radius;
+        padding: $card-padding;
+        margin: 1rem 0;
+        font-size: 0.85rem;
+        line-height: 1.5;
+    }
+    .feed .head,
+    .feed .action-buttons {
+        display: flex;
+        justify-content: space-between;
+    }
+    .feed .user {
+        display: flex;
+        gap: 1rem;
+    }
+    /* Foto del Post */
+    .feed .photo {
+        border-radius: $card-border-radius;
+        overflow: hidden;
+        margin: 0.7rem 0;
+    }
+    .feed .action-buttons {
+        align-items: center;
+        font-size: 1.4rem;
+        margin: 0.6rem;
+    }
+}
+
+.middle .liked-by {
+    display: flex;
+}
+
+.middle .liked-by {
+    span {
+        width: 1.4rem;
+        height: 1.4rem;
+        display: block;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 2px solid $color-white;
+        margin-left: -0.6rem;
+    }
+    span:first-child {
+        margin: 0;
+    }
+}
+
+/*#endregion */
 
 /*#endregion */
 
