--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -292,6 +292,9 @@ main .container .left .sidebar {
     span:first-child {
         margin: 0;
     }
+    p {
+        margin-left: 0.5rem;
+    }
 }
 
 /*#endregion */
