Creata zona DX con i messaggi e le richieste d'amicizia

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,6 +447,8 @@ main .container .left .sidebar {
 
 /*#endregion */
 /*#endregion */
+/*#region Right Zone */
+/*#endregion */
 /* Import del mio file Globale */
 /* Import del mio file variabili */
 /* Import font da Google */
