--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -320,6 +320,8 @@ main .container .left .sidebar {
     bottom: 0;
 }
 
+/*#region Messages  */
+
 .right .messages {
     background: $color-white;
     border-radius: $card-border-radius;
@@ -374,11 +376,66 @@ main .container .left .sidebar {
     .message:last-child {
         margin: 0;
     }
+    .message p {
+        font-size: 0.8rem;
+    }
+    .message .profile-picture {
+        position: relative;
+        overflow: visible;
+    }
+    .profile-picture img {
+        border-radius: 50%;
+    }
+    /* Cerchietto verde per stato online */
+    .message .profile-picture .active {
+        width: 0.8rem;
+        height: 0.8rem;
+        border-radius: 50%;
+        border: 3px solid $color-white;
+        background: $color-success;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+    .messages-requests {
+        color: $color-primary;
+    }
+}
+/*#endregion */
+
+/*#region Friend Requests */
+
+.right .friend-requests {
+    margin-top: 1rem;
+    h4 {
+        color: $color-gray;
+        margin: 1rem 0;
+    }
+}
+
+.right .request {
+    background: $color-white;
+    padding: $card-padding;
+    border-radius: $card-border-radius;
+    margin-bottom: 0.7rem;
+    .info,
+    .action {
+        display: flex;
+        gap: 1rem;
+    }
+    .info {
+        margin-bottom: 1rem;
+    }
+    .info .profile-picture img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 
 
 
 
+/*#endregion */
 
 /*#endregion */
