--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,9 @@
 /* Import del mio file Main */
 @import '../scss/_partials/main';
 
+/* Import del mio file per la Modale */
+@import '../scss/_partials/modal';
+
 /* Import del mio file Globale */
 @import '../scss/global.scss';
 
