--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,6 +6,7 @@
 /* Dimensioni (Width/Heigt) principali */
 /* Bordi e padding */
 /* Position Sticky Rules */
+/* Modal Width & Height */
 /*#region Regole generali foglio di stile */
 *,
 *::after,
