--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -32,3 +32,7 @@ $card-padding: 1rem;
 /* Position Sticky Rules */
 $sticky-top-left: 5.4rem;
 $sticky-top-right: -18rem;
+
+/* Modal Width & Height */
+$modal-width: 100vw;
+$modal-heigth:100vh;
