Completata modale per selezione colore, background e testi

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,6 +7,7 @@
 /* Bordi e padding */
 /* Position Sticky Rules */
 /* Modal Width & Height */
+/* Themes */
 /*#region Regole generali foglio di stile */
 *,
 *::after,
