--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -36,3 +36,10 @@ $sticky-top-right: -18rem;
 /* Modal Width & Height */
 $modal-width: 100vw;
 $modal-heigth:100vh;
+
+/* Themes */
+$first-theme: hsl(252, 75%, 60%);
+$second-theme: hsl(52, 75%, 60%);
+$third-theme: hsl(352, 75%, 60%);
+$fourth-theme: hsl(152, 75%, 60%);
+$fifth-theme: hsl(202, 75%, 60%);
