--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,3 +13,6 @@
 
 /* Import del mio file per la Modale */
 @import '../scss/_partials/modal';
+
+/* Import del mio file per il responsive */
+@import '../scss/_partials/responsive';
