--- a/assets/scss/_partials/_responsive.scss
+++ b/assets/scss/_partials/_responsive.scss
@@ -38,6 +38,9 @@
             display: none;
         }
     }
+    .customize-theme .card {
+        width: 80vw;
+    }
 }
 /*#endregion */
 
@@ -72,6 +75,9 @@
         .right {
             display: none;
         }
+    }
+    .customize-theme .card {
+        width: 92vw;
     }
 }
 
